--- a/src/attendance/templates/attendance_template.jinja
+++ b/src/attendance/templates/attendance_template.jinja
@@ -1,5 +1,5 @@
 03/24 DSCC NTU Work-learn Attendance {{ date }}
-{{ people|length }}/{{ people|length }} Attendance for {{ course[0] }} {{ course[1] }}, {{ lesson_time }}H
+{{ people|length }}/{{ people|length }} Attendance for {{ course[0] }} {{ course[1] }}, {{ start_time }}H
 
 Location: {{ location }}
 
@@ -12,4 +12,4 @@ Attendance Video:
 {{ video }}
 
 Attendance Folder:
-https://drive.google.com/drive/folders/1tpzbKxi94M8DD-cUD1Q0I59US1ZdwTLK
+{{ drive_folder }}
